# finnomena-api-unofficial

./: .gitignore  LICENSE  README.md  api.py  finnomena_api.py  requirements.txt  setup.cfg  setup.py  test.py  utils.py
config/: keys.yaml
finnomena_api/: api.py  keys.py  utils.py
finnomena_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
