[metadata]
version = 1.0
author = Phachara Laohrenu
author_email = phachara.lahorenu@gmail.com
description = an unofficial API for finnomena.com 
long_description = file: README.md
url = https://github.com/phachara-laohrenu/finnomena-api-unofficial
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6